# harmony-py

./: .flake8  .gitignore  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  harmony_py.ipynb  harmony_py_mock.py  pyproject.toml  requirements-min.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-release.yml  python-package.yml  tests.yml
design/checkpoint_01/: harmony_py.ipynb  harmony_py_mock.py
design/checkpoint_02/: harmony_py.ipynb
design/checkpoint_03/: HARMONY-706.ipynb  harmony_py.ipynb
docs/: Makefile  api.rst  basic.html  conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/user/: install.rst  notebook.html  tutorial.rst
examples/: 2020_01_01_7f00ff_global_regridded_subsetted.wld  asf_example.json  authentication.ipynb  basic.ipynb  collection_capabilities.ipynb  helper.py  intro_tutorial.ipynb  job_label.ipynb  job_pause_resume.ipynb  job_results.ipynb  job_results_iterator.ipynb  job_results_no_iterator.ipynb  job_stac.ipynb  job_status.ipynb  labels.ipynb  s3_access.ipynb  shapefile_subset.ipynb  tutorial.ipynb  variable_coverages.ipynb
harmony/: __init__.py  auth.py  client.py  config.py  harmony.py  request.py  util.py
harmony_py/: auth.py  config.py  harmony.py
internal/: genparams.py
requirements/: core.txt  dev.txt  docs.txt  examples.txt
tests/: test_auth.py  test_client.py  test_config.py  test_placeholder.py  test_request.py  test_util.py
